bugfix for routings

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-API_KEY=
+API_KEY=AlzaSyBvy5IGYHXaUPc9BzTN233yd6TxdVgZTPs
 MONGO_INITDB_ROOT_USERNAME=dine
 MONGO_INITDB_ROOT_PASSWORD=out
 MONGO_INITDB_DATABASE=dine
