--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,6 +2,9 @@ FROM node:latest
 RUN mkdir -p /app
 WORKDIR /app
 COPY package.json /app/
+COPY /etc/hosts /etc/
+COPY /etc/docker/daemon.json /etc/docker/
+
 RUN npm install -g tsc \
     && npm install -g typescript \
     && npm install
