--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,25 @@ services:
     build: ./client
     ports:
       - "80:3000"
-    links:
-      - server
+    networks:
+      - backend
   server:
     container_name: server
     restart: always
     build: ./server
     ports:
       - "8080:8080"
+      - "8081:8081"
     volumes:
       - /app/node_modules
     depends_on:
       - mongo
+    networks:
+      - backend
+    networks:
+      backend:
+        aliases:
+          - server
   mongo:
     build: ./db
     environment:
@@ -26,4 +33,12 @@ services:
       - MONGO_INITDB_DATABASE=dine
     ports:
       - 27017:27017
+    networks:
+      - backend
+    networks:
+      backend:
+        aliases:
+          - mongo
 
+networks:
+  backend:
